A Crud Only Using JavaScript.

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <th>OCCUPATION</th>
             <th>EMAIL-ID</th>
             <th>SALARY</th>
-            <th>Operations</th>
+            <th>OPERATIONS</th>
           </thead>
           <tbody style="height: 30px; overflow: scroll" id="crudBody"></tbody>
         </table>
